--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -8,8 +8,9 @@ TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
-GlobalDefaultGameMode=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode.ThirdPersonGameMode_C
+GlobalDefaultGameMode=/Game/Blueprints/SuvivalGameMode.SuvivalGameMode_C
 GlobalDefaultServerGameMode=None
+GameInstanceClass=/Game/Blueprints/SurvivalGameInstance.SurvivalGameInstance_C
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 MinimumiOSVersion=IOS_12
